# MicroscopyFoundationHub

./: .gitignore  README.md  pyproject.toml
config/: dinopoc_lora_cluster.yaml  dinopoc_lora_cluster_scratch.yaml  domain_analysis_example.yaml  droso_cluster.yaml  em_lora_cuda.yaml  em_lora_cuda_cluster.yaml  em_lora_cuda_tversky.yaml  em_lora_mac.yaml  em_pca_mac.yaml  em_unsupervised_features_mac.yaml  exp_baseline_head_only.yaml  lucchi_cluster.yaml  lucchi_lora_cluster.yaml  lucchi_lora_mac.yaml  paired_cluster.yaml  paired_mac.yaml
configs/: README.md
scripts/: README.md  ablation_deepbacs_paired_balance.py  ablation_paired_balance_dinov2.py  eval_em_seg.py  extract_features.py  inspect_backbone.py  move_result_logs.py  ood-detection.py  ood_detection.py  run_domain_analysis.py  run_feature_domain_pipeline.py  run_pca.py  smoke_test.py  summarize_seg_results.py  train_em_seg.py
slurm/: ablation_paired_balance_dinov2.sbatch  feat_domain_pipeline.sbatch  grid_droso.sbatch  grid_droso_dinov3.sbatch  grid_droso_openclip.sbatch  grid_kasthuri_dinov2.sbatch  grid_kasthuri_dinov3.sbatch  grid_kasthuri_openclip.sbatch  grid_lucchi.sbatch  grid_lucchi_dinov2.sbatch  grid_lucchi_dinov3.sbatch  grid_lucchi_openclip.sbatch  grid_paired.sbatch  grid_paired_dinov2.sbatch  grid_paired_dinov3.sbatch  grid_paired_openclip.sbatch  param_counts.sbatch  single_droso.sbatch  single_droso_dinov3.sbatch  single_droso_openclip.sbatch  single_lucchi.sbatch  single_lucchi_dinov2.sbatch  single_lucchi_dinov3.sbatch  single_lucchi_openclip.sbatch  single_paired.sbatch  (+6 more)
(+189 files in other folders)
